--- a/content/themes/BIKERIDERS/css/layout.css
+++ b/content/themes/BIKERIDERS/css/layout.css
@@ -69,7 +69,7 @@ p, body {
 }
 
 /* Appointment page */
-.page-template-page-appointment-php .single .eight.columns {
+/*.page-template-page-appointment-php .single .eight.columns {
 	width: 428px;
 	background-color: #000;
 	min-height: 225px;
@@ -110,7 +110,7 @@ p, body {
 .page-template-page-appointment-php .single .buttonbook a:hover {
 	color:#ddd;
 }
-
+*/
 p.schedule{
 	float: left;
 	margin-top: 4px;
@@ -236,6 +236,7 @@ a .arrow {
 	font-style: normal;
 	padding-left: 10px;
 }
+
 
 /* #review
 ================================================== */
@@ -426,14 +427,14 @@ input[type="button"] {
 	border: 0;
 	color: #fff;
 	display: inline-block;
-	font-size: 10px;
+	font-size: 18px;
 	font-weight: 400;
 	text-transform: uppercase;
 	text-decoration: none;
 	cursor: pointer;
 	margin-bottom: 20px;
 	line-height: normal;
-	padding: 6px 10px;
+	padding: 8px 16px;
 	font-family: 'din-medium', sans-serif; 
 }
 
@@ -493,8 +494,23 @@ input::-moz-focus-inner {
 	padding: 0;
 }
 
+input[type="text"], 
+input[type="password"], 
+input[type="email"], 
+textarea {
+	color:#000;
+	border: 1px solid #000;
+}
 
-
+select {
+color: grey;
+margin-bottom: 5px;
+border: 1px solid #000;
+background: #FFF url('../images/select.png') no-repeat right 0;
+-webkit-appearance: none;
+border-radius: 0;
+padding: 6px;
+}
 /* #Generic Styles
 ================================================== */
 
@@ -889,7 +905,6 @@ width: 57px;
 }
 
 /* MOBILE NAV */
-
 
 #mobile {
 	position: absolute;
@@ -1462,6 +1477,8 @@ footer a,footer a:visited {
 footer a:hover {
 	color: #de8d23;
 }
+
+
 /* #Wordpress related css
 ================================================== */
 
@@ -1647,423 +1664,6 @@ text-align: center !important;
 .container .column, .container .columns {
 	max-width: 100%;
 }
-
-/* #Media Queries
-================================================== */
-
-	/* IPAD */
-	 @media only screen and (min-width: 700px) and (max-width: 1024px) {
-		.ribbon-wrapper-appointment{
-			display: none;
-		}
-		#slideshow-wrap {
-			width:130px;
-			margin-right: 25px
-		}
-		#slideshow-wrap a img {
-			max-width: 120px
-		}
-		#next {
-			left: 45px;
-		}
-		ul.check li {
-			margin-bottom: 4px
-		}
-		h2 {
-			font-size: 36px !important;
-		}
-
-		.featurepost .m_item .m_overlay h2 {
-			font-size: 18px !important;
-		}
-		
-		#primary-nav a{
-			padding: 0 8px;
-		}
-		#primary-nav .indicator div.item235 {
-			width: 69px;
-			margin-left: 0px
-		}
-
-		#primary-nav .indicator div.item294 {
-			margin-left: 90px;
-			width: 116px;
-		}
-		#primary-nav .indicator div.item790{
-			margin-left: 222px;
-		}
-
-		#primary-nav .indicator div.item317 {
-			margin-left: 283px;
-		}
-
-		#primary-nav .indicator div.item238 {
-			margin-left: 352px;
-		}
-
-		#primary-nav .indicator div.item66 {
-			margin-left: 412px;
-			width: 42px;
-		}
-
-		#primary-nav .indicator div.item767 {
-			margin-left: 473px;
-			width: 42px;
-		}
-		
-		.page-template-page-appointment-php .single .eight.columns{
-			width: 332px;
-			min-height: 265px;
-		}
-
-		.page-template-page-appointment-iframe-php h2.pickup {
-			margin-top: 95px;
-			font-size: 28px !important;
-		}
-
-		.page-template-page-service-iframe-php h2.lab {
-			margin-top: 110px;
-			font-size: 28px !important;
-		}
-
-		.page-template-page-appointment-iframe-php p.agreement {
-			font-size: 12px;
-			border-top: none;
-			padding-top: 0
-		}
-		.page-template-page-appointment-iframe-php .highlight {
-			font-size: 18px;
-			margin-top: 0px
-		}
-
-		.page-template-page-service-iframe-php p.agreement {
-			font-size: 12px;
-			border-top: none;
-			padding-top: 0
-		}
-		.page-template-page-service-iframe-php .highlight {
-			font-size: 18px;
-			margin-top: 0px
-		}
-		.page-template-page-appointment-iframe-php .headings {
-		margin: 10px 0;
-		}
-
-		.page-template-page-service-iframe-php .headings {
-		margin: 10px 0;
-		}
-		.strava {
-			display: none;
-		}
-		
-		footer input#mce-EMAIL {
-		width: 175px;
-		}
-
-		footer input#mce-MMERGE4 {
-		width: 55px;
-		}
-
-		footer .one-third {
-		padding-left: 9px;
-		padding-right: 9px;
-		}
-	}
-	/* IFRAME IPAD */
-	@media only screen and (min-width: 568px) and (max-width: 767px) {
-        .ribbon-wrapper-scheduling{
-            display: none
-        }
-        #slideshow-wrap {
-			width:100px;
-			margin-right: 20px
-		}
-		#slideshow-wrap a img {
-			max-width: 90px
-		}
-		#next {
-			left: 38px;
-		}
-		#prev {
-			opacity: 0;
-			margin-top: 110px;
-			margin-bottom: 20px;
-			left: 38px;
-		}
-        #prev {
-            opacity: 1;
-        }
-        .page-template-page-service-iframe-php h2.lab {
-            margin-top: 100px;
-            font-size: 22px !important;
-        }
-        ul.check li {
-            margin-bottom: 4px
-        }
-	}
-	/* IPHONE */
-	@media only screen and (min-width: 320px) and (max-width: 568px) {
-		header {
-			position: absolute;
-			height:80px;
-		}
-		.ribbon-wrapper-appointment{
-			display: none;
-		}	
-		.ribbon-wrapper-scheduling{
-			display: none
-		}
-		nav#primary-nav, nav#secondary-nav {
-		display:none;
-		}
-
-		.page-template-page-service-php #tagline p, .page-template-page-about-php #tagline p, .page-template-page-team-php #tagline p {
-		border-bottom: none
-		}
-		
-		#slideshow-wrap {
-			display:none;
-		}
-		
-		.strava {
-			display: none;
-		}
-		#tagline p {
-			width:100%;
-			text-align: center;
-			margin-left:-10px;
-		}
-
-		#title{
-			width: 60%;
-			text-align: center;
-			margin: 15px auto 0;
-			position: static;
-			float: none
-		}
-
-		h1#title a{
-			pointer-events: none;
-   			cursor: default;
-		}
-
-		h1#title a {
-			cursor:none;
-		}
-
-		#mobile-open {
-			display: block;
-		}
-
-		span.caption {
-		display: none
-		}
-
-		h1.small {
-		font-size: 30px !important;
-		line-height: 35px;
-		}
-
-		h2 {
-		font-size: 22px !important;
-		line-height: 26px;
-		margin-top: 20px;
-		margin-bottom:0;
-		}
-		
-		h2.pickup {
-			margin-top:90px;
-			font-size: 24px !important;
-			line-height: 24px;
-		}
-
-		h2.lab {
-			margin-top:90px;
-			font-size: 24px !important;
-			line-height: 24px;
-		}
-		.highlight {
-		font-size: 18px;
-		margin-top:10px;
-		}
-		
-		.page .bg .single {
-			margin-top:40px;
-		}
-
-		h3{
-		font-size: 21px !important;
-		line-height: 24px;
-		}
-
-		.container .columns.featurepost {
-		margin-bottom: 30px;
-		}
-
-		#feature {
-			height: 230px;
-			padding-top: 80px;
-		}
-
-		#feature .flexslider {
-			height: 235px;
-		}	
-
-		#feature .flexslider .slides img {
-			height: 225px;
-			margin-left: -450px
-		}
-
-		#controls {
-		display: none
-		}
-
-		.title {
-			position: relative;
-			padding-top: 10px;
-		}
-
-		.title p {
-			font-size: 18px !important;
-			line-height: 28px;
-		}
-
-		img.stampsoon {
-			width: 110px;
-			top: 0;
-			right: 10px;
-			margin-top:-15px;
-		}
-		
-		p.quote {
-		font-size: 16px;
-		line-height: 20px;
-		}
-		
-		p.quoter {
-		top: 107px;
-		}
-
-		#review-banner {
-		margin-top: 40px
-		}
-		#review-banner p {
-			padding: 10px 10px 0 20px;
-		}
-
-		#survey {
-			padding:50px 0;
-		}
-
-		#survey input[type="text"], #survey input[type="email"], #survey textarea{
-			width:90%;
-		}
-
-		ul.list ul {
-			margin-left: 5px
-		}
-
-		.headings {
-			margin-top:40px;
-		}
-
-		.page-template-page-appointment-iframe-php .highlight {
-			margin-top: 40px
-		}
-
-		.page-template-page-appointment-iframe-php p.agreement, .page-template-page-service-iframe-php p.agreement {
-			bottom: 0;
-			position: absolute;
-			height:145px;
-			border-top:1px solid #000;
-			padding-top:10px;
-		}
-
-		.page-template-page-appointment-iframe-php ul.check  {
-			margin-bottom: 12px;
-		}
-
-		.page-template-page-appointment-iframe-php ul.check li {
-			padding:4px 0px 5px 21px;
-			margin-bottom: 12px;
-			font-size: 14px
-		}
-		
-		.page-template-page-appointment-iframe-php p.homefee, .page-template-page-service-iframe-php p.homefee{
-			position: absolute;
-			bottom:165px;
-		}
-		
-		.columns .post {
-		margin-bottom: 15px;
-		}
-
-		.intro-line {
-			display: none;
-		}
-		.bg {
-			padding-top: 80px
-		}
-		.separator2 {
-			height:200px;
-		}
-
-		.separator2 .bg3{
-		height: 200px;
-		}
-
-		h4.footer {
-		  	padding-bottom:10px;
-		}
-	
-		footer .columns .none {
-			display:none;
-		}
-
-		footer form {
-		height: 55px;
-		}
-
-		footer input#mce-EMAIL{
-		width: 120px;
-		}
-		footer input#mce-MMERGE4 {
-		width: 55px;
-		}
-
-		footer #signup p {
-			display: none;
-		}
-
-		footer p {
-		margin-bottom: 5px;
-		}
-
-		footer .one-third {
-			padding-top: 10px;
-			min-height: 90px;
-		}
-		
-		footer .copyright  {
-			margin: 25px auto 0;
-		}
-
-		footer .copyright a {
-			margin-right: 20px;
-		}
-	}
-
-	@media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation : portrait) {
-		.page-template-page-appointment-iframe-php #tagline p, .page-template-page-service-iframe-php #tagline p{
-			margin-top: 45px;
-		}
-
-		.page-template-page-appointment-iframe-php #mobile-open, .page-template-page-service-iframe-php #mobile-open{
-			top: 21px;
-			margin-left: 12px;
-		}
-	}
-
 
 
 /* #Font-Face
