--- a/content/themes/BIKERIDERS/css/layout.css
+++ b/content/themes/BIKERIDERS/css/layout.css
@@ -243,23 +243,28 @@ a .arrow {
 /* #review
 ================================================== */
 
-.review {
-	padding-bottom: 20px;
+.single.review {
+	margin-left: 10px;
+	margin-right: 10px;
 }
 
 #review-banner{
 	background: #000;
 	padding: 0;
 	margin-bottom: 25px;
+	z-index: 1;
+	position: relative;
 }
 
 #review-banner img.scale-with-grid {
-	padding-left: 30px;
+	padding-left: 20px;
 }
+
 #review-banner p {
-	padding: 33px 0 0 20px;
+	padding: 25px 0 0 20px;
 	color: #fff;
 }
+
 #review-banner a {
 	color: #fff;
 	text-transform: uppercase;
@@ -269,7 +274,8 @@ a .arrow {
 	margin-top: 9px;
 	display: inline-block;
 }
-#survey {
+
+/*#survey {
 	border-top:2px solid #000;
 	padding: 95px 0;}
 
@@ -355,7 +361,7 @@ a .arrow {
 	margin: 0;
 	padding: 0.5em 1em;
 }
-
+*/
 /* Quote Slider
 ================================================== */
 .quote-container {
