--- a/content/themes/BIKERIDERS/css/fullslate.css
+++ b/content/themes/BIKERIDERS/css/fullslate.css
@@ -135,6 +135,10 @@ body .fs-embed a.fs-service-opening {
 .fs-embed .fs-openings {
 	margin-bottom: 20px!important
 }
+.fs-embed .fs-instructions .fs-special {
+	display: none
+}
+
 .fs-embed .fs-instructions {
 	font-size:0.8em!important;
 }
