--- a/content/themes/BIKERIDERS/css/mobile.css
+++ b/content/themes/BIKERIDERS/css/mobile.css
@@ -284,10 +284,11 @@
 			right: 10px;
 			margin-top:-15px;
 		}
-		
+		.panel {
+			max-width: 320px;
+		}
 		p.quote {
 		font-size: 16px;
-		line-height: 20px;
 		}
 		
 		p.quoter {
