--- a/content/themes/BIKERIDERS/css/mobile.css
+++ b/content/themes/BIKERIDERS/css/mobile.css
@@ -220,7 +220,9 @@
 		margin-top: 20px;
 		margin-bottom:0;
 		}
-		
+		span.logo {
+			margin-bottom: 5px;
+		}
 		h2.pickup {
 			margin-top:90px;
 			font-size: 24px !important;
