--- a/content/themes/GS/css/scss/_layout.scss
+++ b/content/themes/GS/css/scss/_layout.scss
@@ -773,7 +773,7 @@ nav a:hover,nav a:focus {
 	display: none;
 	position: absolute;
 	height: 30px;
-	width:30px;
+	width:20px;
 	background-color: #000;
 	top: 15px;
 	z-index: 1400;
@@ -1304,7 +1304,7 @@ footer form{
 
 footer  .row:first-child .columns:not(:first-child) {
 	border-left:1px solid #858585;
-	min-height: 150px;
+	min-height: 200px;
 	padding-left: 15px;
 }
 footer  .social{
@@ -1451,14 +1451,13 @@ ul.list {
 	position:relative;
 	padding:0px;
 	margin-bottom:-1px;
-	list-style-type: none;
 }
 ul.float {
 	float:left;
 	width:50%;
-	list-style-type: none;
 }
 ul.list li {
+	list-style: none;
 	padding:4px 0px 5px 0;
 	width:auto;
 	border-bottom:1px solid #ddd;
@@ -1467,10 +1466,12 @@ ul.float li {
 	margin-right:20px;
 }
 ul.bullet li {
+	list-style: none;
 	padding:4px 0px 5px 21px;
 	background:url(../images/list-dot.jpg) no-repeat 1px 13px;
 }
 ul.check li {
+	list-style: none;
 	padding:4px 0px 5px 21px;
 	background:url(../images/list-check.png) no-repeat 1px 11px;
 }
@@ -1488,45 +1489,6 @@ ul.check li {
 .page-template-page-appointment-iframe-php p {
 	margin-bottom: 4px;
 	color: #de8d23;
-}
-
-/* slideshow brands */
-#slideshow-wrap{
-		float: left;
-		width: 180px;
-		 background-color: #000;
-	margin-right: 30px;
-	height:700px;
-}
-.slideshow {
-	height:480px;
-}
-
-#slideshow-wrap a img{
-	padding:10px 0;
-	max-width:180px;
-	width:auto;
-	height:auto;
-}
-
-#prev, #next{
-	background: transparent url(../images/bg_direction_nav.png) no-repeat 0 0;
-	width: 25px;
-	height: 15px;
-	position: relative;
-	display: block;
-	text-indent: -9999px;
-	left:73px;
-}
-#prev{
-	opacity: 0;
-	margin-top:115px;
-	margin-bottom: 15px
-}
-
-#next{
-	margin-top: 30px;
-	background-position: 0 -15px;
 }
 
 .post {
