--- a/content/themes/GS/css/scss/_layout.scss
+++ b/content/themes/GS/css/scss/_layout.scss
@@ -772,24 +772,31 @@ nav a:hover,nav a:focus {
 #mobile-open {
 	display: none;
 	position: absolute;
-	height: 30px;
-	width:20px;
-	background-color: #000;
-	top: 15px;
+	height: 24px;
+	width:24px;
 	z-index: 1400;
-	left:15px;
-	text-indent: -9999px
-}
-
-#mobile-open:after {
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 0px;
-	width: 100%;
-	height: 5px;
-	border-top: 15px double #fff;
-	border-bottom: 5px solid #fff;
+	margin: 15px;
+	i{
+		display:block;
+		width: 24px;
+		height: 2px;
+		margin: 12px 0;
+		background: #fff;
+		&:after, &:before {
+			content: '';
+			display: block;
+			width: 24px;
+			height: 2px;
+			background: #fff;
+			position: absolute;
+		}
+		&:after {
+			margin-top: -7px;
+		}
+		&:before {
+			margin-top: 7px;
+		}
+	}
 }
 
 #jPanelMenu-menu ul.sub-menu li a {
@@ -1249,7 +1256,10 @@ footer input[type="email"] {
 	border:0;
 	border-radius:0;
 }
-footer input[type="text"]:focus,footer input[type="password"]:focus,footer input[type="email"]:focus,footer textarea:focus {
+footer input[type="text"]:focus,
+footer input[type="password"]:focus,
+footer input[type="email"]:focus,
+footer textarea:focus {
 	color:#fff;
 }
 
@@ -1304,7 +1314,7 @@ footer form{
 
 footer  .row:first-child .columns:not(:first-child) {
 	border-left:1px solid #858585;
-	min-height: 200px;
+	min-height: 175px;
 	padding-left: 15px;
 }
 footer  .social{
@@ -1312,14 +1322,19 @@ footer  .social{
 	padding-right:0;
 }
 
-footer .social ul {
-	margin-bottom: 0;
-	text-align: right;
-}
-
-.social ul li {
-	display: inline-block;
-	margin-right: 5px;
+footer {
+	li {
+		margin-bottom: 8px;
+		line-height: 18px
+	}
+	.social ul {
+		margin-bottom: 0;
+		text-align: right;
+		li {
+			display: inline-block;
+			margin-right: 5px;
+		}
+	}
 }
 
 .social img:hover {
